--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -85,6 +85,7 @@ transform()
 
 .main-content
   margin-right 250px
+  margin-left 0
   padding 10px
 
 .shop-right
@@ -480,60 +481,6 @@ th.next
    .container
       width 100%
 
-/* страница регистрации */
-.registration-form
-  width 580px
-  padding 0 10px
-  margin 30px auto
-  border 1px solid #438eb9
-  border-radius main-radius
-  h1
-    margin 0 -10px
-    padding 10px
-    background #438eb9
-    color #fff
-  h3
-    border-bottom 1px solid #438eb9
-    padding-bottom 5px
-    margin-bottom 15px
-  .reg-soc
-    a
-      font-size 50px
-      margin 0 10px
-      &:hover
-        text-decoration none
-  .reg-now
-    &>div
-      margin-bottom 10px
-    label
-      width 200px
-      span
-        color #d2322d
-        &:before
-          margin-right 5px !important
-    .radio
-      display inline-block
-      vertical-align baseline
-      margin 0
-      span
-        color #000
-    .form-control
-      display inline-block
-  .btn-primary
-    width 200px
-    margin 20px auto
-    font-size 20px
-    display block
-  input[type="text"]
-  input[type="email"]
-  input[type="tel"]
-  input[type="password"]
-    width 320px
-  #captcha
-    width 155px
-  input[type="file"]
-  .captcha
-    display inline-block
 /* блоки при нелогине */
 .nologin-user-short
   a
@@ -580,16 +527,5 @@ th.next
     width 150px
     display block
     margin 5px auto 0
-/* регистрация для магазина */
-.shop-reg
-  width 320px
-  h1
-    text-align center
-  .reg-now label
-    width 60px
-  input[type="text"]
-  input[type="email"]
-  input[type="tel"]
-  input[type="password"]
-    width 220px
+
 
