--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -501,5 +501,84 @@ transform()
   padding-right 10px
   vertical-align top
 
+/* страница регистрации */
+.login-forms
+  width 650px
+  margin 30px auto
+.registration-form
+  width 320px
+  height 260px
+  vertical-align top
+  display inline-block
+  padding 0 10px
+  position relative
+  border 1px solid #438eb9
+  border-radius main-radius
+  h1
+    margin 0 -10px
+    padding 10px
+    background #438eb9
+    color #fff
+    text-align center
+  h3
+    border-bottom 1px solid #438eb9
+    padding-bottom 5px
+    margin-bottom 15px
+  .reg-soc
+    a
+      font-size 50px
+      margin 0 10px
+      &:hover
+        text-decoration none
+  .reg-now
+    &>div
+      margin-bottom 10px
+    a
+      float right
+      margin-right 15px
+      padding-top 3px
+      color #ccc
+    label
+      width 60px
+      span
+        color #d2322d
+        &:before
+          margin-right 5px !important
+    .radio
+      display inline-block
+      vertical-align baseline
+      margin 0
+      span
+        color #000
+    .form-control
+      display inline-block
+  .btn-submit
+    width 140px
+    background #438eb9
+    color #fff
+    font-size 20px
+    display block
+    position absolute
+    bottom 10px
+    left 50%
+    margin-left -70px
+    &:hover
+      background #1b6aaa
+  input[type="text"]
+  input[type="email"]
+  input[type="tel"]
+  input[type="password"]
+    width 220px
+  #captcha
+    width 155px
+  input[type="file"]
+  .captcha
+    display inline-block
+
+#selectGroup
+  margin-right 15px
+  float right
+
+
 
 
