--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -83,6 +83,9 @@ transform()
   padding-top 20px
   vertical-align top
 
+.shop
+  border-left 1px solid #ccc
+
 .main-content
   margin-right 250px
   margin-left 0
