--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -12,7 +12,7 @@ html
 
 body
   background #fff
-  height 101%
+  height 100%
 
 a
   outline none !important
@@ -574,6 +574,10 @@ transform()
   input[type="file"]
   .captcha
     display inline-block
+  .email-alert
+    color #dca874
+    display none
+    text-align center
 
 #selectGroup
   margin-right 15px
