--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -575,7 +575,7 @@ transform()
   .captcha
     display inline-block
   .email-alert
-    color #dca874
+    color #ff0000
     display none
     text-align center
 
