--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -4,6 +4,7 @@
 @import 'ace-fonts.css'
 @import 'ace.css'
 @import 'flexslider.css'
+@import 'login.css'
 
 main-radius = 2px
 second-radius = 1px
@@ -532,3 +533,13 @@ th.next
     margin 5px auto 0
 
 
+/* popup логина */
+.modal-auth
+  width 643px
+  overflow hidden
+  height 260px
+  margin-left -327px
+  .login-forms
+    margin 0
+  .close
+    margin-right -5px
