--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -103,10 +103,19 @@ a {
 .shop-right .sidebar-title {
   font-size: 20px;
   border-top: 1px solid #ccc;
-  padding: 4px 0;
+  padding: 4px 0 7px 0;
   background: #f9f9f9;
   text-align: center;
   color: #2b7dbc;
+}
+.shop-right .sidebar-title .go-to-orders {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 4px;
+}
+.shop-right nav {
+  display: inline-block;
+  vertical-align: middle;
 }
 .shop-right nav a {
   display: block;
@@ -196,6 +205,7 @@ a {
   padding: 0 2px 5px 2px;
   width: 250px;
   z-index: 11 !important;
+  margin-left: -84px;
 }
 .datepicker table {
   width: 100%;
@@ -353,6 +363,45 @@ span
   display: block;
   margin-left: 30px;
   margin-right: 10px;
+}
+.shop-orders {
+  display: none;
+}
+.shop-orders h1 {
+  margin-top: 10px;
+}
+.shop-orders .back-to-shop {
+  float: right;
+  margin-top: 13px;
+}
+.shop-orders .order-item {
+  margin-bottom: 20px;
+}
+.shop-orders .order-item table {
+  width: 100%;
+}
+.shop-orders .order-item table thead td {
+  font-size: 14px;
+  color: #ccc;
+  background: #f9f9f9;
+}
+.shop-orders .order-item table td {
+  text-align: center;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  padding: 5px 0;
+}
+.shop-orders .order-item table td:first-child {
+  text-align: left;
+  padding-left: 10px;
+}
+.shop-orders .order-item .plus-minus {
+  font-size: 24px;
+  text-decoration: none;
+}
+.shop-orders .order-item .order-products {
+  margin: 10px 0 0 0;
+  display: none;
 }
 .ace-spinner {
   width: 50px !important;
