основа для работы с календарем и заказами

--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -209,10 +209,10 @@ th.next
 .input-group-addon
   cursor pointer
 
-.made
+.free-day
   background-color #62c462
   &:after
-    content "Выполненный заказ"
+    content "Свободный день"
     margin-left -120px
 .soon
   background-color #5bc0de
@@ -224,7 +224,7 @@ th.next
   &:after
     content "Заказ готов"
     margin-left -60px
-.made:after
+.free-day:after
 .soon:after
 .prepare:after
   position absolute
@@ -233,7 +233,7 @@ th.next
   padding 2px 5px
   color #fff
   display none
-.made:hover:after
+.free-day:hover:after
 .soon:hover:after
 .prepare:hover:after
   display block
