--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -227,11 +227,11 @@ th.next,
 .input-group-addon {
   cursor: pointer;
 }
-.made {
+.free-day {
   background-color: #62c462;
 }
-.made:after {
-  content: "Выполненный заказ";
+.free-day:after {
+  content: "Свободный день";
   margin-left: -120px;
 }
 .soon {
@@ -248,7 +248,7 @@ th.next,
   content: "Заказ готов";
   margin-left: -60px;
 }
-.made:after,
+.free-day:after,
 .soon:after,
 .prepare:after {
   position: absolute;
@@ -258,7 +258,7 @@ th.next,
   color: #fff;
   display: none;
 }
-.made:hover:after,
+.free-day:hover:after,
 .soon:hover:after,
 .prepare:hover:after {
   display: block;
