базовая работа с заказами

--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -355,6 +355,9 @@ th.next
     .order-products
       margin 10px 0 0 0
       display none
+  .btn-primary
+    margin 10px 0 10px 10px
+    float right
 
 .ace-spinner
   width 50px !important
