--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -403,6 +403,10 @@ span
   margin: 10px 0 0 0;
   display: none;
 }
+.shop-orders .btn-primary {
+  margin: 10px 0 10px 10px;
+  float: right;
+}
 .ace-spinner {
   width: 50px !important;
 }
