--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -234,23 +234,23 @@ th.next,
   content: "Свободный день";
   margin-left: -120px;
 }
-.soon {
+.special-day {
   background-color: #5bc0de;
 }
-.soon:after {
-  content: "Заказ на комплектации";
+.special-day:after {
+  content: "Специальная цена";
   margin-left: -130px;
 }
-.prepare {
+.closed-day {
   background-color: #9baab3;
 }
-.prepare:after {
-  content: "Заказ готов";
+.closed-day:after {
+  content: "Закрытый день";
   margin-left: -60px;
 }
 .free-day:after,
-.soon:after,
-.prepare:after {
+.special-day:after,
+.closed-day:after {
   position: absolute;
   background-color: rgba(0,0,0,0.5);
   border-radius: 2px;
@@ -259,8 +259,8 @@ th.next,
   display: none;
 }
 .free-day:hover:after,
-.soon:hover:after,
-.prepare:hover:after {
+.special-day:hover:after,
+.closed-day:hover:after {
   display: block;
 }
 .day-menu {
