--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -481,6 +481,8 @@ th.next
       text-align left
       padding 0
       padding-top 15px
+      .fa-shopping-cart
+        float right
       span
       .ace-spinner
       .fa
@@ -489,27 +491,32 @@ th.next
         margin 0 17px
       span
         font-size 20px
+      >span
+        margin 0 !important
+        width 130px
+      .prepack-item
+        display inline-block
+        vertical-align middle
+        span
+          font-size 12px
+          margin-left 0
+        .fa-plus
+          font-size 20px
+          position relative
+          left -8px
+        .fa-plus:hover
+          text-decoration none
       &.with-prepack
         span
         .ace-spinner
         .fa
           margin 0 10px
-        >span
-          margin 0
-          width 130px
+        .fa-shopping-cart
+          margin-top 8px
         .prepack-item
-          display inline-block
-          vertical-align middle
           span
             display block
-            font-size 12px
             text-align center
-          .fa-plus
-            font-size 20px
-            position relative
-            left -8px
-          .fa-plus:hover
-            text-decoration none
     .prepack-list
       float right
       margin-right 69px
