--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -149,7 +149,6 @@ transform()
             max-width 40px
             max-height 40px
       .ace-spinner
-      .ace-spinner+span
         display inline-block
         vertical-align middle
       .product-right-descr
@@ -162,6 +161,8 @@ transform()
           padding 0
           border 0
           background 0
+      .unit-name
+        display none
   .itogo-right
     padding-left 10px
     font-size 16px
