--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -422,12 +422,12 @@ th.next
   color #ccc
 
 .modal
-  width 600px
+  width 660px
   left 50%
-  margin-left -300px
+  margin-left -330px
   background #fff
   top 20%
-  height 288px
+  height 388px
   overflow-y auto
   .close
     outline none
@@ -467,17 +467,21 @@ th.next
     h3
       margin-top 0
     .product-text
-      height 170px
+      height 270px
       overflow auto
+    .product-options
+      font-size 10px
+      color #ccc
+      margin-bottom 10px
     .modal-body
       padding 10px
       position static
     .modal-footer
       position absolute
       height 60px
-      top 205px
+      top 305px
       right 10px
-      width 370px
+      width 430px
       background #fff
       text-align left
       padding 0
