--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -560,6 +560,7 @@ th.next
     width auto
     padding-right 10px
     font-size 20px
+    top 230px
     .btn
       float right
       margin 5px
