--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -38,6 +38,12 @@ transform()
   max-width 1240px
   min-height 100%
 
+.navbar
+  a.navbar-brand
+    padding 0
+  img
+    height 45px
+
 .ace-nav>li
     a
       padding 11px 12px 0 12px
