--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -27,6 +27,12 @@ a {
   max-width: 1240px;
   min-height: 100%;
 }
+.navbar a.navbar-brand {
+  padding: 0;
+}
+.navbar img {
+  height: 45px;
+}
 .ace-nav>li a {
   padding: 11px 12px 0 12px;
   line-height: 1.428571429;
