--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -547,6 +547,7 @@ th.next
           font-size 20px
           position relative
           left -8px
+          top -8px
         .fa-plus:hover
           text-decoration none
       &.with-prepack
@@ -572,6 +573,16 @@ th.next
         top: -10px
         &:hover
           opacity 1
+  .error-prepack
+    display none
+    color #ff0000
+    position absolute
+    bottom -50px
+    right 5px
+    width 119px
+    height 50px
+    font-size 10px
+    line-height 10px
 .modal-order-end
   max-height 312px
   .modal-body-list
